0031965: Visualization - AIS_InteractiveContext::HilightWithColor() ignores passed highlight style

AIS_InteractiveContext::highlightGlobal() now passed through Style argument to highlightOwners().
Added OCC31965 command for testing AIS_InteractiveContext::Hilight() behavior.